<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_filter_group"
        android:title="@string/sort_dropdown"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/menu_filter_creation_date"
                android:title="@string/sort_by_creation_date" />
            <item
                android:id="@+id/menu_filter_eta"
                android:title="@string/sort_by_date" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_actions_generate"
        android:title="@string/generate_note" />
    <item
        android:id="@+id/menu_actions_delete_all"
        android:title="@string/del_all_notes" />
</menu>